# workflow-bin

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  mirror.yml
src/: main.rs  mem_probe.rs  opendal_fs.rs  opendal_mime_guess.rs
