[package]
name = "workflow-bin"
authors = ["29 <791603901@qq.com>"]
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.8", features = ["derive"] }
fs_extra = "1.3.0"
nu-ansi-term = "0.50.0"
opendal = { version = "0.47.3", features = ["services-oss"] }
pushover-rs = "0.3.18"
reqwest = "0.12.5"
serde = { version = "1.0.204", features = ["derive"] }
tokio = { version = "1.38.0", features = ["full"] }
toml = "0.8.14"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["chrono"] }

[target.'cfg(windows)'.dependencies]
zip = "2.1.3"

[target.'cfg(not(windows))'.dependencies]
flate2 = "1.0.30"
tar = "0.4.41"
