[package]
name = "workflow-bin"
authors = ["29 <791603901@qq.com>"]
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.14", features = ["derive"] }
fs_extra = "1.3.0"
mime_guess = "2.0.5" # 等opendal合并了我的pr并发版后，这个就不再需要了
nu-ansi-term = "0.50.1"
opendal = { version = "0.47.3", features = ["services-oss"] }
pushover-rs = "0.3.18"
reqwest = "0.12.5"
serde = { version = "1.0.205", features = ["derive"] }
sysinfo = "0.30.13"
tokio = { version = "1.39.2", features = ["full"] }
toml = "0.8.19"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["chrono"] }
walkdir = "2.5.0"

[target.'cfg(windows)'.dependencies]
zip = "2.1.6"

[target.'cfg(not(windows))'.dependencies]
flate2 = "1.0.31"
tar = "0.4.41"
