[package]
name = "workflow-bin"
authors = ["29 <791603901@qq.com>"]
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.14", features = ["derive"] }
fs_extra = "1.3.0"
nu-ansi-term = "0.50.1"
opendal = { version = "0.48.0", features = ["layers-mime-guess", "services-oss"] }
pushover-rs = "0.3.18"
reqwest = "0.12.5"
serde = { version = "1.0.205", features = ["derive"] }
sysinfo = { version = "0.31.2", default-features = false, features = ["system"] }
tokio = { version = "1.39.2", features = ["full"] }
toml = "0.8.19"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["chrono"] }
walkdir = "2.5.0"

[target.'cfg(windows)'.dependencies]
zip = "2.1.6"

[target.'cfg(not(windows))'.dependencies]
flate2 = "1.0.31"
tar = "0.4.41"
